<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/menu_dashboard" />
        <item
            android:id="@+id/nav_products"
            android:icon="@drawable/ic_inventory_black_24dp"
            android:title="@string/menu_products" />
        <item
            android:id="@+id/nav_stock"
            android:icon="@drawable/ic_storage_black_24dp"
            android:title="@string/menu_stock" />
        <item
            android:id="@+id/nav_suppliers"
            android:icon="@drawable/ic_supplier_black_24dp"
            android:title="@string/menu_suppliers" />
        <item
            android:id="@+id/nav_customers"
            android:icon="@drawable/ic_customer_black_24dp"
            android:title="@string/menu_customers" />
        <item
            android:id="@+id/nav_reports"
            android:icon="@drawable/ic_assessment_black_24dp"
            android:title="@string/menu_reports" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/menu_settings" />
    </group>
</menu>