<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_dashboard">

    <fragment
        android:id="@+id/nav_dashboard"
        android:name="com.flv.flowventory.ui.dashboard.DashboardFragment"
        android:label="@string/menu_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/nav_products"
        android:name="com.flv.flowventory.ui.products.ProductsFragment"
        android:label="@string/menu_products"
        tools:layout="@layout/fragment_products" />

    <fragment
        android:id="@+id/nav_stock"
        android:name="com.flv.flowventory.ui.stock.StockFragment"
        android:label="@string/menu_stock"
        tools:layout="@layout/fragment_stock" />

    <fragment
        android:id="@+id/nav_suppliers"
        android:name="com.flv.flowventory.ui.suppliers.SuppliersFragment"
        android:label="@string/menu_suppliers"
        tools:layout="@layout/fragment_suppliers" />

    <fragment
        android:id="@+id/nav_customers"
        android:name="com.flv.flowventory.ui.customers.CustomersFragment"
        android:label="@string/menu_customers"
        tools:layout="@layout/fragment_customers" />

    <fragment
        android:id="@+id/nav_reports"
        android:name="com.flv.flowventory.ui.reports.ReportsFragment"
        android:label="@string/menu_reports"
        tools:layout="@layout/fragment_reports" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.flv.flowventory.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <!-- Legacy fragments for compatibility -->
    <fragment
        android:id="@+id/nav_transform"
        android:name="com.flv.flowventory.ui.transform.TransformFragment"
        android:label="@string/menu_transform"
        tools:layout="@layout/fragment_transform" />

    <fragment
        android:id="@+id/nav_reflow"
        android:name="com.flv.flowventory.ui.reflow.ReflowFragment"
        android:label="@string/menu_reflow"
        tools:layout="@layout/fragment_reflow" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.flv.flowventory.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>